# RAGCook

./: .gitignore  Dockerfile  README.md  pyproject.toml
conf/: llm_global_config.yml  retrieval_pipeline.yml
data/VECTORSTORE/: meta.json
data/VECTORSTORE/collection/quick_recipe/: storage.sqlite
data/VECTORSTORE/collection/quick_recipe_openai/: storage.sqlite
src/: main.py  rag_pipeline.py  vectorstore.py
src/utils/: document_processing.py  helpers.py  utils_llm.py
