[project]
name = "ragcook"
version = "0.1.0"
description = "Simple RAG pipeline to daft savourous recipies"
authors = [
    {name = "skaddd",email = "mateo.lebrun@telecomnancy.net"}
]
readme = "README.md"
requires-python = "~3.11"
dependencies = [
    "langchain (>=0.3.17,<0.4.0)",
    "qdrant-client (>=1.13.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.1.1,<8.0.0)",
    "unstructured (>=0.16.17,<0.17.0)",
    "langchain-community (>=0.3.16,<0.4.0)",
    "glob2 (>=0.7,<0.8)",
    "langchain-openai (>=0.3.3,<0.4.0)",
    "langchain-qdrant (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
